--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "Simple utility for port knocking written in Node.js",
   "main": "portknock.js",
+  "bin" : { "portknock" : "./portknock.js" },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
