--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "portknock",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Simple utility for port knocking written in Node.js",
   "main": "portknock.js",
-  "bin" : { "portknock" : "./portknock.js" },
+  "bin": {
+    "portknock": "./portknock.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
